--- a/web/css/app.css
+++ b/web/css/app.css
@@ -29,7 +29,7 @@ body {
   font-family: "Poppins Medium";
   font-size: 115px;
 }
-.accueil--container div h1 #colored {
+.accueil--container div h1 .colored {
   color: #84B28F;
 }
 .accueil--container div h2 {
@@ -59,6 +59,26 @@ body {
 }
 .accueil--container a button img {
   height: 50px;
+}
+
+.layout header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.layout header img {
+  height: 80px;
+  margin-left: 15px;
+  margin-top: 15px;
+}
+.layout header p {
+  font-family: "Poppins Medium";
+  font-size: 85px;
+  margin-top: 5px;
+  margin-right: 15px;
+}
+.layout header p .colored {
+  color: #84B28F;
 }
 
 /*# sourceMappingURL=app.css.map */
