--- a/web/sass/_accueil.scss
+++ b/web/sass/_accueil.scss
@@ -7,7 +7,7 @@
       font-family: "Poppins Medium";
       font-size: 115px;
 
-      #colored{
+      .colored{
         color: #84B28F;
       }
     }
