--- a/web/css/app.css
+++ b/web/css/app.css
@@ -1,4 +1,8 @@
 @font-face {
+  font-family: "Poppins Light";
+  src: url("../assets/Poppins/Poppins-Light.ttf");
+}
+@font-face {
   font-family: "Poppins";
   src: url("../assets/Poppins/Poppins-regular.ttf");
 }
@@ -18,6 +22,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: Poppins;
+  background-color: #F9F9F9;
 }
 
 .accueil--container div {
@@ -59,6 +64,60 @@ body {
 }
 .accueil--container a button img {
   height: 50px;
+}
+
+.menu--container {
+  background-color: white;
+  width: 90vw;
+  height: 100vh;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+.menu--container #close-img {
+  height: 80px;
+  margin-left: 10px;
+  margin-top: 10px;
+}
+.menu--container #menu-logosomb {
+  height: 250px;
+  margin-right: 15px;
+  float: right;
+}
+.menu--container h2 {
+  font-family: "Poppins Medium";
+  font-size: 75px;
+  margin-top: 80px;
+  margin-left: 35px;
+  margin-bottom: 0px;
+}
+.menu--container h2 .colored {
+  color: #84B28F;
+}
+.menu--container input {
+  background-color: #F9F9F9;
+  width: 400px;
+  height: 60px;
+  border: 0px;
+  font-size: 40px;
+  margin-top: 0px;
+  margin-left: 40px;
+  padding-left: 15px;
+  border-radius: 6px;
+  border: 0.25px solid #b0b0b0;
+}
+.menu--container .menu {
+  margin-left: 75px;
+}
+.menu--container .menu a {
+  text-decoration: none;
+  color: black;
+  font-size: 45px;
+  font-family: "Poppins Light";
+}
+.menu--container .menu a .colored {
+  color: #84B28F;
+}
+.menu--container .menu a .bolder {
+  font-family: "Poppins Medium";
 }
 
 .layout header {
