--- a/web/sass/app.scss
+++ b/web/sass/app.scss
@@ -1,4 +1,8 @@
 @font-face {
+  font-family: 'Poppins Light';
+  src: url("../assets/Poppins/Poppins-Light.ttf");
+}
+@font-face {
   font-family: 'Poppins';
   src: url("../assets/Poppins/Poppins-regular.ttf");
 }
@@ -19,7 +23,9 @@ body {
   margin: 0;
   padding: 0;
   font-family: Poppins;
+  background-color: #F9F9F9;
 }
 
 @import 'accueil';
+@import 'menu';
 @import 'layout';
