--- a/web/css/app.css
+++ b/web/css/app.css
@@ -30,9 +30,20 @@ body {
   margin-left: 5%;
   line-height: 5px;
 }
+@media (min-width: 600px) {
+  .accueil--container div {
+    margin-top: 10%;
+    margin-left: 25%;
+  }
+}
 .accueil--container div h1 {
   font-family: "Poppins Medium";
   font-size: 115px;
+}
+@media (min-width: 600px) {
+  .accueil--container div h1 {
+    font-size: 90px;
+  }
 }
 .accueil--container div h1 .colored {
   color: #84B28F;
@@ -41,9 +52,20 @@ body {
   font-family: "Poppins Italic";
   font-size: 45px;
 }
+@media (min-width: 600px) {
+  .accueil--container div h2 {
+    font-size: 25px;
+  }
+}
 .accueil--container div img {
   transform: rotateY(180deg);
   margin-left: 25%;
+}
+@media (min-width: 600px) {
+  .accueil--container div img {
+    width: 25%;
+    margin-left: 35%;
+  }
 }
 .accueil--container a {
   text-decoration: none;
@@ -64,6 +86,17 @@ body {
 }
 .accueil--container a button img {
   height: 50px;
+}
+@media (min-width: 600px) {
+  .accueil--container a button {
+    margin-top: 10%;
+    height: 40px;
+    width: 200px;
+    font-size: 20px;
+  }
+  .accueil--container a button img {
+    height: 25px;
+  }
 }
 
 .menu--container {
