--- a/web/sass/_accueil.scss
+++ b/web/sass/_accueil.scss
@@ -3,9 +3,17 @@
     margin-top: 25%;
     margin-left: 5%;
     line-height: 5px;
+    @media (min-width: 600px){
+      margin-top: 10%;
+      margin-left: 25%;
+    }
+
     h1 {
       font-family: "Poppins Medium";
       font-size: 115px;
+      @media (min-width: 600px) {
+        font-size: 90px;
+      }
 
       .colored{
         color: #84B28F;
@@ -14,10 +22,18 @@
     h2{
       font-family: "Poppins Italic";
       font-size: 45px;
+      @media (min-width: 600px) {
+        font-size: 25px;
+      }
     }
     img{
       transform: rotateY(180deg);
       margin-left: 25%;
+
+      @media(min-width: 600px){
+        width: 25%;
+        margin-left: 35%;
+      }
     }
   }
 
@@ -40,6 +56,17 @@
 
       img {
         height: 50px;
+      }
+    }
+    @media (min-width: 600px){
+      button{
+        margin-top: 10%;
+        height: 40px;
+        width: 200px;
+        font-size: 20px;
+        img{
+          height: 25px;
+        }
       }
     }
   }
