--- a/web/sass/app.scss
+++ b/web/sass/app.scss
@@ -15,6 +15,10 @@
   src: url("../assets/Poppins/Poppins-Bold.ttf");
 }
 @font-face {
+  font-family: 'Poppins SemiBold';
+  src: url("../assets/Poppins/Poppins-SemiBold.ttf");
+}
+@font-face {
   font-family: 'Poppins Italic';
   src: url("../assets/Poppins/Poppins-Italic.ttf");
 }
@@ -31,3 +35,6 @@ $minwidth: 1000px;
 @import 'accueil';
 @import 'menu';
 @import 'layout';
+
+//PROFIL
+@import 'profil/profil-connexion';
