--- a/web/css/Questions/questions-home.css
+++ b/web/css/Questions/questions-home.css
@@ -75,3 +75,11 @@
     margin: auto;
 }
 
+.question-div{
+    background-color: white;
+    width: 100%;
+    height: 100px;
+    border: 1px solid black;
+    border-radius: 10px;
+}
+
