--- a/web/css/layout.css
+++ b/web/css/layout.css
@@ -48,8 +48,9 @@
         border: none;
         border-radius: 5px;
         background-color: #F9F9F9;
-        border: 0.25px solid black;
+        border: 0.15px solid black;
         margin-left: 25px;
+        padding-left: 5px;
     }
     .layout header .header-desktop div:last-child {
         align-items: center;
