Update see.php sur questions

--- a/web/css/Questions/questions-see.css
+++ b/web/css/Questions/questions-see.css
@@ -11,10 +11,12 @@
 
 .sub-see-question-container{
     margin-top: 25px;
+    width: 400px;
 }
 
 .sub-see-question-container h2{
     margin-bottom: 0px;
+    width: 400px;
 }
 
 .title-sub-see-question{
