--- a/web/css/Questions/questions-see.css
+++ b/web/css/Questions/questions-see.css
@@ -1,3 +1,12 @@
+a {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    text-decoration: none;
+    color: black;
+
+}
+
 .question-see--container{
     display: flex;
     flex-direction: row;
@@ -40,6 +49,24 @@
 
 .reponse--container{
     width: 45%;
+}
+
+#proposerReponse{
+    display: block;
+    padding: 8px 12px;
+    background-color: #84B38F;
+    border : solid 1px black;
+    border-radius: 10px;
+    font-size: 14px;
+    margin: auto;
+    margin-top: 30px;
+    margin-bottom: 20px;
+    font-family: "Poppins Light";
+    font-weight: bold;
+}
+#imgPropose {
+    width: 17px;
+    height: 17px;
 }
 
 .reponse-id--container{
