Modification du CSS formulaire

--- a/web/css/Questions/questions-formulaire.css
+++ b/web/css/Questions/questions-formulaire.css
@@ -1,127 +1,7 @@
-.questions-formulaire--container {
-    display: flex;
-    flex-direction: column;
-    width: 100vw;
+/*UPDATE*/
+.section-plan--container .section-plan .section-plan-label{
+    margin-bottom: -10px;
 }
-.questions-formulaire--container h2 {
-    font-size: 75px;
-    padding-left: 25px;
-    border-bottom: 1px solid #84B28F;
-}
-@media (min-width: 1000px) {
-    .questions-formulaire--container h2 {
-        font-size: 35px;
-        padding-left: 75px;
-    }
-}
-.questions-formulaire--container div {
-    margin: auto;
-    display: flex;
-    flex-direction: column;
-}
-.questions-formulaire--container div label {
-    font-size: 35px;
-    margin-left: 25px;
-    margin-top: 25px;
-    margin-bottom: 0px;
-}
-@media (min-width: 1000px) {
-    .questions-formulaire--container div label {
-        font-size: 15px;
-        margin-left: 20px;
-    }
-}
-.questions-formulaire--container div input {
-    margin-top: -5px;
-    font-size: 45px;
-    height: 90px;
-    width: 700px;
-    border: none;
-    border-radius: 5px;
-    background-color: #F9F9F9;
-    border: 0.25px solid black;
-    padding-left: 15px;
-}
-.questions-formulaire--container div select {
-    margin-top: -5px;
-    font-size: 45px;
-    height: 90px;
-    width: 700px;
-    border: none;
-    border-radius: 5px;
-    background-color: #F9F9F9;
-    border: 0.25px solid black;
-    padding-left: 15px;
-}
-@media (min-width: 1000px) {
-    .questions-formulaire--container div input {
-        height: 35px;
-        width: 390px;
-        font-size: 20px;
-    }
-    .questions-formulaire--container div select {
-        height: 35px;
-        width: 400px;
-        font-size: 20px;
-    }
-}
-.questions-formulaire--container div a {
-    text-decoration: none;
-}
-.questions-formulaire--container input[type=submit] {
-    width: 750px;
-    margin: auto;
-    font-size: 35px;
-    height: 65px;
-    margin-top: 85px;
-    background-color: #9BD2A8;
-    color: white;
-    border-radius: 100px;
-    border: 0px;
-}
-@media (min-width: 1000px) {
-    .questions-formulaire--container input[type=submit] {
-        font-size: 15px;
-        height: 35px;
-        width: 400px;
-    }
-}
-.questions-formulaire--container #lastp {
-    font-size: 25px;
-    margin: auto;
-}
-@media (min-width: 1000px) {
-    .questions-formulaire--container #lastp {
-        font-size: 10px;
-    }
-}
-.questions-formulaire--container #lastp a {
-    color: #9BD2A7;
-}
-
-
-#no-margin-top{
-    margin-top: 0px;
-}
-#title-date {
-    margin-left: 0px;
-    margin-bottom: 0px;
-}
-.date--container label{
-    margin-left: 0px;
-}
-.flex-row{
-    display: flex;
-    flex-direction: row;
-    align-content: center;
+.section-plan--container .section-plan .section-plan-input{
     margin-top: 10px;
-}
-.flex-row p {
-    margin: 0;
-    margin-top: 7.5px;
-    margin-right: 10px;
-}
-#date-input{
-    margin-top: 0px;
-    width: 365px;
 }
