--- a/web/css/Reponses/reponses-see.css
+++ b/web/css/Reponses/reponses-see.css
@@ -8,7 +8,29 @@
     text-align: end;
 }
 
-.title-reponse--container .title-p {
+.title-reponse--container .title-reponse-p {
     margin-left: 125px;
     font-size: 20px;
+    width: 700px;
+}
+
+/*SECTION*/
+.sections-reponse--container{
+}
+
+.section-title{
+    width: 15%;
+    border-bottom: 2px solid #9BD2A7;
+}
+.section-title h2 {
+    text-align: right;
+    margin-bottom: 0px;
+}
+
+.sections-reponse--container p {
+    width: 90%;
+    margin: auto;
+    margin-left: 5%;
+    margin-top: 10px;
+    margin-bottom: 70px;
 }
