Modification de la liste des questions

--- a/web/css/Questions/questions-home.css
+++ b/web/css/Questions/questions-home.css
@@ -159,6 +159,7 @@ div#question-title--container {
     align-items: baseline;
     padding-top: 20px;
     padding-bottom: 5px;
+    padding-left:  5px;
 }
 
 #categorie {
