--- a/web/css/Questions/questions-home.css
+++ b/web/css/Questions/questions-home.css
@@ -41,7 +41,7 @@ a {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin-top: 50px;
+    padding-top: 50px;
     font-size: 22.5px;
 }
 
