--- a/web/css/messagesFlash.css
+++ b/web/css/messagesFlash.css
@@ -2,10 +2,29 @@
 /* https://getbootstrap.com/docs/3.4/components/#alerts */
 
 .alert {
+    position: absolute;
     padding: 15px;
     margin-bottom: 20px;
     border: 1px solid transparent;
     border-radius: 4px;
+    width: 25%;
+    display: block;
+    margin-top: 10px;
+    margin-left: 70%;
+}
+
+.alert p {
+    text-align: center;
+}
+
+.alert a {
+    position: absolute;
+}
+
+.alert a img{
+    height: 30px;
+    margin-top: -10px;
+    margin-left: -10px;
 }
 
 .alert-success {
