--- a/web/css/app.css
+++ b/web/css/app.css
@@ -29,3 +29,22 @@ body {
   font-family: Poppins;
   background-color: #F9F9F9;
 }
+
+.button-top #buttonTop {
+  display: block;
+  padding: 8px 12px;
+  background-color: #84B38F;
+  border : solid 1px black;
+  border-radius: 10px;
+  font-size: 14px;
+  margin: auto;
+  margin-top: 30px;
+  margin-bottom: 20px;
+  font-family: "Poppins Light";
+  font-weight: bold;
+}
+
+.button-top #imgButtonTop {
+  width: 17px;
+  height: 17px;
+}
