--- a/web/css/Questions/questions-see.css
+++ b/web/css/Questions/questions-see.css
@@ -25,7 +25,9 @@ a {
 .sub-see-question-container{
     margin-top: 25px;
     width: 400px;
-
+}
+.sub-see-question-container:nth-child(1){
+    margin-top: 0px;
 }
 .sub-see-question-container h2 img {
     width: 22px;
@@ -56,7 +58,8 @@ a {
 
 .sub-see-question-container p {
     padding-left: 30px;
-    margin-top: 2%;
+    margin-bottom: 0px;
+    margin-top: 0px;
 
 }
 
