--- a/web/css/layout.css
+++ b/web/css/layout.css
@@ -135,6 +135,19 @@ footer {
 
 }
 
+footer a {
+    text-decoration: none;
+    color: black;
+}
+
+.footer-contact .logo-and-title{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    margin-top: 10px;
+    margin-bottom: 0px;
+}
+
 .footer-contact .email-button{
     display: flex;
     align-items: center;
