--- a/web/css/Profil/profil-connexion.css
+++ b/web/css/Profil/profil-connexion.css
@@ -53,58 +53,8 @@
 .profil-connexion--container div a {
     text-decoration: none;
 }
-.profil-connexion--container div #passwordlosse {
-    color: #84B38F;
-    text-align: right;
-    font-family: "Poppins SemiBold";
-    font-size: 25px;
-    margin-top: 0px;
-}
-@media (min-width: 1000px) {
-    .profil-connexion--container div #passwordlosse {
-        font-size: 10px;
-        margin-right: 5px;
-        margin-top: 0px;
-    }
-}
-.profil-connexion--container #checkbox-div {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: start;
-    margin: auto;
-    width: 700px;
-}
-@media (min-width: 1000px) {
-    .profil-connexion--container #checkbox-div {
-        width: 400px;
-        align-items: center;
-    }
-}
-.profil-connexion--container #checkbox-div input[type=checkbox] {
-    height: 45px;
-    width: 45px;
-    margin-left: 0px;
-    padding-left: 0px;
-    margin-left: 10px;
-}
 
-@media (min-width: 1000px) {
-    .profil-connexion--container #checkbox-div input[type=checkbox] {
-        height: 15px;
-        width: 15px;
-    }
-}
-.profil-connexion--container #checkbox-div p {
-    font-size: 25px;
-    margin-left: 20px;
-}
-@media (min-width: 1000px) {
-    .profil-connexion--container #checkbox-div p {
-        font-size: 10px;
-        margin-left: 10px;
-    }
-}
+
 .profil-connexion--container input[type=submit] {
     width: 750px;
     margin: auto;
@@ -123,15 +73,9 @@
         width: 400px;
     }
 }
-.profil-connexion--container #lastp {
-    font-size: 25px;
-    margin: auto;
-}
-@media (min-width: 1000px) {
-    .profil-connexion--container #lastp {
-        font-size: 10px;
-    }
-}
-.profil-connexion--container #lastp a {
-    color: #9BD2A7;
+
+
+a{
+    text-decoration: none;
+    color: black;
 }
